--- a/cysteel.3/equip.html
+++ b/cysteel.3/equip.html
@@ -7,7 +7,7 @@
 <head>
 	<!-- Basic Meta Tags -->
   <meta charset="utf-8">
-  <title>嘉義精密工業股份有限公司</title>
+  <title>嘉鋼精密工業股份有限公司</title>
 	<meta name="description" content="嘉義精密工業股份有限公司">
 	<meta name="keywords" content="嘉義精密工業股份有限公司">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -53,8 +53,8 @@
         <!-- navigation -->
         <div class="container">
 			<header class="clearfix">
-				<span>Chia Yi Steel Co., Ltd.<span class="fa fa-copyright" data-content="COPY RIGHTS"></span></span>
-				<h1>嘉義精密工業股份有限公司</h1>
+				<span style="color:#47a3da;">Chia Yi Steel Co., Ltd.<span class="fa fa-copyright" data-content="COPY RIGHTS"></span></span>
+				<a href="index.html"><h1>嘉鋼精密工業股份有限公司</h1></a>
 				<nav>
 					<a href="https://www.facebook.com/" class="bp-icon bp-icon-prev" data-info="FB"><span>pre</span></a>
 					<a href="https://www.instagram.com/" class="bp-icon bp-icon-next" data-info="IG"><span>next</span></a>
@@ -65,7 +65,7 @@
 			<div class="main">
 				<nav class="cbp-hsmenu-wrapper" id="cbp-hsmenu-wrapper">
 					<div class="cbp-hsinner">
-						<ul class="cbp-hsmenu">
+            <ul class="cbp-hsmenu">
 							<li>
 								<a href="company.html">COMPANY</a>
 							</li>
@@ -75,8 +75,8 @@
 							<li>
 								<a href="product.html">PRODUCTS</a>
 							</li>
-							<li><a href="cert.html">CERTIFICATION</a></li>
-							<li><a href="contact.html">CONTACT</a></li>
+							<li><a href="cert.html">HISTORY</a></li>
+							
 						</ul>
 					</div>
 				</nav>
