--- a/cysteel.3/index.html
+++ b/cysteel.3/index.html
@@ -86,8 +86,8 @@
 							<li>
 								<a href="product.html">PRODUCTS</a>
 							</li>
-							<li><a href="cert.html">HISTORY</a></li>
-							
+							<li><a href="history.html">HISTORY</a></li>
+							<li><a href="quality.html">QUALITY</a></li>
 						</ul>
 					</div>
 				</nav>
