--- a/cysteel.3/product.html
+++ b/cysteel.3/product.html
@@ -249,7 +249,7 @@
                         
                         <ul style="list-style:none; ">
                           <p><a style="color:blanchedalmond" href="tell:+886-5-2211411"><i class="fas fa-phone"></i>+886-5-2211411</a></p>
-                          <p><a style="color:blanchedalmond" href="mailto:sales@mail.cysteel.com.tw"><i class="fas fa-envelope"></i>sales@mail.cysteel.com.tw</a></p>
+                          <p><a style="color:blanchedalmond" href="mailto:sales@cysteel.com.tw"><i class="fas fa-envelope"></i>sales@cysteel.com.tw</a></p>
                           <p><a style="color:blanchedalmond" href="#"><i class="fas fa-fax"></i>+886-5-2218211</a></p>
                         </ul>
                         
