--- a/cysteel.3/history.html
+++ b/cysteel.3/history.html
@@ -46,13 +46,13 @@
  @import url(https://fonts.googleapis.com/css?family=Raleway:400,900);
 
 body{
-  font-family: 'Raleway', sans-serif;
+  
   color: #333;
 }
 
 header h1{
   text-align: center;
-  font-weight: bold;
+  
   margin-top: 0;
 }
   
@@ -397,7 +397,7 @@ header h1{
         <!-- navigation -->
         <div class="container">
 			<header class="clearfix">
-				<span style="color:#47a3da;">Chia Yi Steel Co., Ltd.<span class="fa fa-copyright" data-content="COPY RIGHTS"></span></span>
+				<span style="color:#47a3da;font-weight:bolder;">Chia Yi Steel Co., Ltd.<span class="fa fa-copyright" data-content="COPY RIGHTS"></span></span>
 				<a href="index.html"><h1>嘉鋼精密工業股份有限公司</h1></a>
 				<nav>
 					<a href="https://www.facebook.com/" class="bp-icon bp-icon-prev" data-info="FB"><span>pre</span></a>
