--- a/cysteel.3/product.html
+++ b/cysteel.3/product.html
@@ -45,7 +45,7 @@
  <style>
   /* CSS FOR DEMO ONLY */
   body {
-    font-family: Arial, sans-serif;
+    
   }
   .animated  {
     -webkit-animation-duration : 3s  ;
@@ -280,13 +280,15 @@
                   <div class="span4">
                     <div class="title-1"><h4>GRAY IRON</h4></div>
                         <div class="text-1">
-                          <img src="/cysteel.3/images/iron1.jpg" height="20vh">
+                            <a href="/cysteel.3/images/grayirontable.png" data-lightbox="image-1" data-title="My caption">
+                          <img src="/cysteel.3/images/iron1.jpg" height="20vh"></a>
                         </div>
                   </div>
                   <div class="span4">
                     <div class="title-1"><h4>DUCTILE IRON </h4></div>
                         <div class="text-1">
-                          <img src="/cysteel.3/images/iron2.jpg" height="20vh">
+                            <a href="/cysteel.3/images/DUCTILE IRONtable.png" data-lightbox="image-1" data-title="My caption">
+                          <img src="/cysteel.3/images/iron2.jpg" height="20vh"></a>
                         </div>
                   </div>
                   <div class="span4">
