--- a/cysteel.3/quality.html
+++ b/cysteel.3/quality.html
@@ -53,7 +53,7 @@
         <!-- navigation -->
         <div class="container">
 			<header class="clearfix">
-				<span>Chia Yi Steel Co., Ltd.<span class="fa fa-copyright" data-content="COPY RIGHTS"></span></span>
+				<span style="color:#47a3da;">Chia Yi Steel Co., Ltd.<span class="fa fa-copyright" data-content="COPY RIGHTS"></span></span>
 				<h1>嘉義精密工業股份有限公司</h1>
 				<nav>
 					<a href="https://www.facebook.com/" class="bp-icon bp-icon-prev" data-info="FB"><span>pre</span></a>
