--- a/JS_course_beginner/example/03-javascript新手須知篇/03-3.html
+++ b/JS_course_beginner/example/03-javascript新手須知篇/03-3.html
@@ -13,10 +13,10 @@
 
     <script>
         window.onload = function(){
-            console.log(1);
-            console.log(2);
-            console.log(3);
+            c console.log(123)
+        console.error(456)
         }
+       
     </script>
 </body>
 </html>
