--- a/JS_course_beginner/example/03-javascript新手須知篇/03-2.html
+++ b/JS_course_beginner/example/03-javascript新手須知篇/03-2.html
@@ -10,13 +10,14 @@
 </head>
 <body>
     <img id="logo" src="../images/logo2.png" alt="">
-    <!-- <script src="./js/03-2.js"></script> -->
-    <script>
+    <!--<script>
         window.onload = function(){
             alert(1);
             alert(2);
             alert(3);
         }
-    </script>
+    </script> -->
+    
+    <script src="./js/03-2.js"></script> 
 </body>
 </html>
