--- a/JS_course_beginner/example/03-javascript新手須知篇/03-6.html
+++ b/JS_course_beginner/example/03-javascript新手須知篇/03-6.html
@@ -14,24 +14,28 @@
     <script>
         
         // 一般運算子（加減乘除）
-        var num1 = 1 + 1;
-        console.log(num1);
-        var num2 = 5 - 2;
-        console.log(num2);
-        var num3 = 2 * 2;
-        console.log(num3);
-        var num4 = 10 / 3;
-        console.log(num4);
+        // var num1 = 1 + 1;
+        // console.log(num1);
+        // var num2 = 5 - 2;
+        // console.log(num2);
+        // var num3 = 2 * 2;
+        // console.log(num3);
+        // var num4 = 10 / 3;
+        // console.log(num4);
 
         // 特殊運算子轉型
-        var test1 = "5" + 1;
+        var test1 = "5" + 1;//程式執行從右到左
         console.log(test1);
-        var test2 = "6" - 1;
+        var test2 = "6" - 1;//減法幫你轉換型別=5
         console.log(test2);
         var test3 = 1 + "2";
         console.log(test3);
-        var test4 = 5 - "2";
+        var test4 = 5 - "2";//減法幫你轉換型別
         console.log(test4);
+
+        var int = 1;
+        int = "我";//小心型別
+        console.log(int);
 
     </script>
 </body>
