--- a/cysteel.3/index.html
+++ b/cysteel.3/index.html
@@ -97,16 +97,22 @@
           <div class="slider1 flexslider">  <!-- Slider -->
             <ul class="slides">
               <li>
-    	    	    <img src="/cysteel.2/pic/slider1.jpg" alt="">
+    	    	    <img src="/cysteel.3/images/banner/COVER01.jpg" alt="">
     	    		</li>
     	    		<li>
-    	    	    <img src="/cysteel.2/pic/slider2.jpg" alt="">
+    	    	    <img src="/cysteel.3/images/banner/DSC6771.jpg" alt="">
     	    		</li>
     	    		<li>
-    	    	    <img src="/cysteel.2/pic/slider3.jpg" alt="">
+    	    	    <img src="/cysteel.3/images/banner/FBMII.jpg" alt="">
     	    		</li>
                     <li>
-    	    	    <img src="/cysteel.2/pic/slider4.jpg" alt="">
+    	    	    <img src="/cysteel.3/images/banner/HSP.JPG" alt="">
+              </li>
+              <li>
+    	    	    <img src="/cysteel.3/images/banner/IMG_E4117.jpg" alt="">
+    	    		</li>
+                    <li>
+    	    	    <img src="/cysteel.3/images/banner/cysteel.jpg alt="">
     	    		</li>
             </ul>
           </div>  <!-- Slider End --> <!-- Slider End -->
