--- a/cysteel.3/index.html
+++ b/cysteel.3/index.html
@@ -112,7 +112,7 @@
     	    	    <img src="/cysteel.3/images/banner/IMG_E4117.jpg" alt="">
     	    		</li>
                     <li>
-    	    	    <img src="/cysteel.3/images/banner/cysteel.jpg alt="">
+    	    	    <img src="/cysteel.3/images/banner/cysteel.jpg" alt="">
     	    		</li>
             </ul>
           </div>  <!-- Slider End --> <!-- Slider End -->
